--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   url_launcher: ^6.1.11
   intl: ^0.18.0
   flutter_svg: ^1.1.6
+  rive: ^0.12.3
 
 dev_dependencies:
   flutter_test:
@@ -34,5 +35,6 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/rive_assets/
 
   
